Added DIscord Rich Presence
It's uh, very buggy it seems. But the foundation is all there

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Money Mash Quest 1.6.2 WINDOWS"
+name="Money Mash Quest"
 platform="Windows Desktop"
 runnable=true
 advanced_options=true
@@ -9,9 +9,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Windows/WINDOWS_MoneyMashQuest_alpha_1.6.2_.exe"
+export_path="../../../Downloads/Money Mash Quest Exports/Windows/MoneyMashQuest.exe"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=1
@@ -37,7 +39,7 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Dirt Tin Games"
+application/company_name=""
 application/product_name="Money Mash Quest"
 application/file_description=""
 application/copyright=""
@@ -69,7 +71,7 @@ texture_format/etc2=false
 
 [preset.1]
 
-name="Money-Mash-Quest-1.6.0-ANDROID"
+name="Money-Mash-Quest"
 platform="Android"
 runnable=true
 advanced_options=false
@@ -79,8 +81,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="Exports/Android/MoneyMashQuest.apk"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -114,8 +118,10 @@ package/show_as_launcher_app=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
+launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
 xr_features/xr_mode=0
+gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -131,6 +137,7 @@ permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
+permissions/access_media_location=false
 permissions/access_mock_location=false
 permissions/access_network_state=false
 permissions/access_surface_flinger=false
@@ -218,6 +225,10 @@ permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
 permissions/read_logs=false
+permissions/read_media_audio=false
+permissions/read_media_images=false
+permissions/read_media_video=false
+permissions/read_media_visual_user_selected=false
 permissions/read_phone_state=false
 permissions/read_profile=false
 permissions/read_sms=false
@@ -277,7 +288,7 @@ permissions/write_user_dictionary=false
 
 [preset.2]
 
-name="Money Mash Quest 1.6.0 HTML"
+name="Money Mash Quest"
 platform="Web"
 runnable=true
 advanced_options=false
@@ -286,9 +297,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Web/index.html"
+export_path="../../../Downloads/Money Mash Quest Exports/HTML/index.html"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -319,7 +332,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.3]
 
-name="Money Mash Quest 1.6.0 LINUX"
+name="Money Mash Quest"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -328,9 +341,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Linux/LINUX_MoneyMashQuest_alpha_1.6.2.x86_64"
+export_path="../../../Downloads/Money Mash Quest Exports/Linux/LINUX_MoneyMashQuest_alpha_1.6.2.x86_64"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
