--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -26,6 +26,7 @@ debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -64,6 +65,9 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
@@ -100,6 +104,7 @@ gradle_build/compress_native_libraries=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
+gradle_build/custom_theme_attributes={}
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
@@ -120,13 +125,16 @@ launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
+shader_baker/enabled=false
 xr_features/xr_mode=0
 gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
+screen/edge_to_edge=false
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
+screen/background_color=Color(0, 0, 0, 1)
 user_data_backup/allow=false
 command_line/extra_args=""
 apk_expansion/enable=false
@@ -285,6 +293,10 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+dotnet/android_use_linux_bionic=false
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
 
 [preset.2]
 
@@ -329,6 +341,11 @@ progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
 progressive_web_app/background_color=Color(0, 0, 0, 1)
+threads/emscripten_pool_size=8
+threads/godot_pool_size=4
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
 
 [preset.3]
 
@@ -341,7 +358,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/Money Mash Quest Exports/Linux/LINUX_MoneyMashQuest_alpha_1.6.2.x86_64"
+export_path="../../Downloads/MMQ/LINUX_MoneyMashQuest_alpha_1.6.2.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -358,6 +375,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
@@ -371,6 +389,9 @@ unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
