--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -358,7 +358,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/MMQ/LINUX_MoneyMashQuest_alpha_1.6.2.x86_64"
+export_path="../../Downloads/MMQ/MoneyMashQuest.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -375,7 +375,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
-shader_baker/enabled=false
+shader_baker/enabled=true
 binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
